# Workshop_3

./: README.md  connection.py  pyproject.toml
EDA/: 001_EDA_.ipynb  001_EDA_model_training.ipynb  001_country_EDA.ipynb  002_Model_.ipynb
clean-data/: finalDataset.csv  modelDataset.csv
data/: finalDataset.csv  modelDataset.csv
kafka/: consumer.py  process_data.py  producer.py
